tests/fixtures/invalid/set_add_set.py
# Cannot add set to set (use | instead)
x: set[int] = {1, 2} + {3, 4}
